--- a/sliding menu/styles.css
+++ b/sliding menu/styles.css
@@ -1,93 +1,104 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
+a{
+  text-decoration: none;
+  color: aliceblue;
+  font-family: 'Abel', sans-serif;
+  font-size: 1.6em;
+}
+
+a:hover{
+  color:blueviolet;
+  transition: .5s;
+}
+
 #nav{
-  width: 30%;
-  left: -30%;
   position: absolute;
   height: 100vh;
+  top: 0;
+  width: 30%;
+  left: -30%;
   background: linear-gradient(180deg, #dd6565 0%, #fbbf3f 100%);
   transition: .6s;
-}
-#nav ul li{
-  list-style-type: none;
 }
 
 #nav ul{
   padding-top: 100px;
-  
 }
-a{
-    text-decoration: none;
-    color: white;
-    font-size: 1.6em;
-    font-family: 'Abel', sans-serif;
 
+#nav ul li{
+  list-style-type: none;
 }
 
 #menu {
   display: none;
   position: absolute;
-  top: 20px;
-  left: 30px;
-  width: 50px;
-  height: 44px;
-  transition: 1s;
+  top: 30px;
+  left: 40px;
+  height: 43px;
 }
-.inner_line {
+
+.line {
   display: block;
   position: absolute;
-  left: 0;
-  width: 50px;
-  height: 3px;
-  background-color: #000000;
-  transition: 1s;
-  border-radius: 4px;
+  width: 40px;
+  height: 2px;
+  background-color: #dd6565;
+  transition: .5s;
 }
-#line1 {
+
+.line:hover{
+  color:white;
+}
+#toggle1 {
   top: 0;
 }
-#line2 {
+#toggle2 {
   top: 20px;
 }
-#line3 {
+
+#toggle3 {
   bottom: 0px;
 }
 
-.in{
+.inner{
   transform: translateX(100%);
 }
 .line_1,.line_2,.line_3{
-  background: #000000;
+  background: #fff;
+}
+.line_1,.line_2,.line_3{
+  background: #fff;
+}
+.line_3:hover{
+  background: #fff;
 }
 .line_1 {
   transform: translateY(20px) rotate(-45deg);
   top: 0;
 }
 .line_2 {
-  opacity: 0;
+  display: none;
 }
 .line_3 {
   transform: translateY(-20px) rotate(45deg);
   bottom: 0;
 }
 
-/* ここから*/
-
-#box{
-  width: 100%;
-  left: -100%;
+#window{
   position: absolute;
   height: 100vh;
+  width: 100%;
+  left: -100%;
 }
-.back{
+
+.x{
   transform: translateX(100%);
 }
 
-/* ここまで追加*/
-
 
 @media (max-width: 1200px) {
-  #hamburger {
+  #menu {
     display: block;
   }
 }
